manifests/slackin/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: slackin
  namespace: slackin
  labels:
    app: slackin
spec:
  replicas: 1
  template:
    metadata:
      name: slackin
      labels:
        app: slackin
    spec:
      containers:
      - name: slackin
        image: codeformuenster/slackin:master
        ports:
        - name: ui
          containerPort: 3000
