manifests/slackin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slackin
  namespace: slackin
  labels:
    app: slackin
spec:
  ports:
    - port: 3000
      protocol: TCP
      name: ui
  selector:
    app: slackin
