manifests/slackin/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: slackin
  namespace: slackin
  labels:
    app: slackin
    component: ingress
  # annotations:
  #   kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: slackin.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: slackin
          servicePort: 3000
        path: /
  # tls:
  # - hosts:
  #   - slackin.codeformuenster.org
  #   secretName: slackin-tls
